--- a/style.css
+++ b/style.css
@@ -1,1 +1,49 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 
+header{
+    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    background-color: gray;
+    height: 10vh;
+    padding: 0 2%;
+}
+
+main{
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    height: 80vh;
+}
+
+main aside{ 
+    background-color: darkcyan;
+}
+
+footer{
+    background-color: #ccc;
+    height: 10vh;
+    color: black;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+/* figure {
+    display: grid;
+    grid-template-columns: 150px 150px 150px 150px 150px 150px 150px;
+    
+} */
+
+.gallery{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, 150px);
+    /* grid-template-columns: 150px 150px 150px 150px 150px 150px 150px 150px; */
+    padding: 10px;
+    gap: 10px;
+    justify-content: center;
+}
